# ssh-kim

./: .gitignore  BUILD_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tests.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
